tests/machine/x/c/dataset_where_filter.error
line: 0
error: output mismatch
-- got --
--- Adults ---
Alice is 30 
Charlie is 65  (senior)
Diana is 45
-- want --
--- Adults ---
Alice is 30
Charlie is 65  (senior)
Diana is 45
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:48Z
