tests/machine/x/c/dataset_where_filter.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:48Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  char *name;
  int age;
} people_t;
typedef struct {
  int len;
  people_t *data;
} people_list_t;
people_list_t create_people_list(int len) {
  people_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(people_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *name;
  int age;
  int is_senior;
} adults_item_t;
typedef struct {
  int len;
  adults_item_t *data;
} adults_item_list_t;
adults_item_list_t create_adults_item_list(int len) {
  adults_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(adults_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  people_t tmp1_data[] = {(people_t){.name = "Alice", .age = 30},
                          (people_t){.name = "Bob", .age = 15},
                          (people_t){.name = "Charlie", .age = 65},
                          (people_t){.name = "Diana", .age = 45}};
  people_list_t tmp1 = {4, tmp1_data};
  people_list_t people = tmp1;
  adults_item_list_t tmp2 = create_adults_item_list(people.len);
  int tmp3 = 0;
  for (int tmp4 = 0; tmp4 < people.len; tmp4++) {
    people_t person = people.data[tmp4];
    if (!(person.age >= 18)) {
      continue;
    }
    tmp2.data[tmp3] = (adults_item_t){
        .name = person.name, .age = person.age, .is_senior = person.age >= 60};
    tmp3++;
  }
  tmp2.len = tmp3;
  adults_item_list_t adults = tmp2;
  printf("--- Adults ---\n");
  for (int tmp5 = 0; tmp5 < adults.len; tmp5++) {
    adults_item_t person = adults.data[tmp5];
    printf("%s is %d %s\n", person.name, person.age,
           (person.is_senior ? " (senior)" : ""));
  }
  free(tmp2.data);
  return 0;
}
